[UIMA-4663] update CasCopier.
git-svn-id: https://svn.apache.org/repos/asf/uima/uimaj/branches/experiment-v3-jcas@1716257 13f79535-47bb-0310-9956-ffa450edef68